--- a/slides/cmdline/commands2.tex
+++ b/slides/cmdline/commands2.tex
@@ -1,10 +1,11 @@
-\begin{frame}{Архивация}
+\begin{frame}[fragile]{Архивация}
 	\begin{block}{Архивация: tar}
 		\begin{itemize}
 			\item {\tt -c} -- создать архив
 			\item {\tt -x} -- извлечь из архива
 				\begin{itemize}
 					\item {\tt -C} -- перейти в директорию
+					\item {\tt -{}-strip-components=N} -- пропустить N уровней
 				\end{itemize}
 			\item {\tt -f} -- запись в файл
 		\end{itemize}
@@ -16,7 +17,11 @@
 			\item {\tt -d} -- распаковать
 			\item {\tt -c} -- вывод на консоль
 		\end{itemize}
+		\begin{verbatim}
+dd if=/dev/sda bs=1M count=1 | gzip -c > backup.gz
+		\end{verbatim}
 	\end{block}
+
 \end{frame}
 
 \begin{frame}[fragile]{Архивация: примеры}
@@ -39,6 +44,7 @@ tar -czf archive.tar.gz *
 	Создать копию текущей директории в директории {\tt /tmp/copy/}:
 	\begin{verbatim}
 tar -c * | tar -C /tmp/copy -x
+tar -cf - * | tar -C /tmp -xf -
 	\end{verbatim}
 	\pause
 	Создать копию текущей директории на другом хосте:
@@ -47,49 +53,3 @@ HostDest: netcat -l 2222 | gzip -dc | tar -C /tmp/copy/ -x
 HostSrc:  tar -c * | gzip -9 | netcat HostDest 2222
 	\end{verbatim}
 \end{frame}
-
-\begin{frame}[fragile]{Поиск файлов}
-	\begin{block}{find}
-		\begin{itemize}
-			\item {\tt -type} -- тип файлового объекта
-			\item {\tt -size} -- размер
-			\item {\tt -maxdepth} -- глубина рекурсии
-			\item {\tt -exec} -- выполнить команду
-			\item {\tt -printf} -- форматированный вывод
-		\end{itemize}
-	\end{block}
-
-	\begin{block}{Примеры}
-		\begin{verbatim}
-find /etc -type f -size +100k  -exec ls -l {} \;
-		\end{verbatim}
-
-		\begin{verbatim}
-find -type d -user altlinux
-		\end{verbatim}
-	
-	\end{block}
-\end{frame}
-
-\begin{frame}[fragile]{xargs}
-	\begin{block}{xargs}
-			Утилита для создания и запуска команд из стандартного потока ввода:
-		\begin{verbatim}
-xargs [options] command [command options]
-		\end{verbatim}
-	
-	\end{block}
-
-	\begin{block}{Примеры}
-		\begin{verbatim}
-find /etc -type f -size -100k | xargs tar -czf /tmp/archive-100k.tar.gz
-		\end{verbatim}
-
-		\begin{verbatim}
-find /etc -type f | xargs -I {} echo "Найден {} файл"
-		\end{verbatim}
-	
-	\end{block}
-\end{frame}
-
-
