--- a/epam/LinuxEssentials/04-commands.tex
+++ b/epam/LinuxEssentials/04-commands.tex
@@ -22,17 +22,11 @@
 \end{frame}
 
 
-\begin{frame}
-	\tableofcontents
-	[hideallsubsections]
-\end{frame}
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Полезные команды}
+\section{Полезные команды (продолжение)}
 
 \subsection{Архиваторы}
 \mode<all>{\input{../../slides/cmdline/commands2}}
