--- a/slides/cmdline/editors-intro.tex
+++ b/slides/cmdline/editors-intro.tex
@@ -35,7 +35,7 @@
 		{\tt [ addr [ ,  addr ] ] cmd [ args ]}
 	\end{block}
 
-	\small
+	\tiny
 	\begin{block}{Команды}
 		\begin{itemize}
 		  \item {\tt a, i} -- добавить строку после (перед) текущей
