--- a/slides/packaging/intro.tex
+++ b/slides/packaging/intro.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-	\frametitle{И еще раз про "DLL hell"}
+	\frametitle{Про "DLL hell"}
 	
 	\begin{block}{Устанавливаем программу}
 	А что же с библиотеками?
