--- a/slides/cmdline/commands3.tex
+++ b/slides/cmdline/commands3.tex
@@ -42,7 +42,8 @@ xargs [options] command [command options]
 \begin{frame}[fragile]{xargs}
 	\begin{block}{Примеры}
 		\begin{verbatim}
-find /etc -type f -size -100k | xargs tar -czf /tmp/archive-100k.tar.gz
+find /etc -type f -size -100k | \
+ xargs tar -czf /tmp/archive-100k.tar.gz
 		\end{verbatim}
 
 		\begin{verbatim}
@@ -50,7 +51,8 @@ find /etc -type f | xargs -I {} echo "Найден {} файл"
 		\end{verbatim}
 
 		\begin{verbatim}
-find . -type f -name "*.mp3" -print0 | xargs -0 -n 1 -P 0 -I mp3 avconv -i mp3 mp3.ogg
+find . -type f -name "*.mp3" -print0 | \
+ xargs -0 -n 1 -P 0 -I mp3 avconv -i mp3 mp3.ogg
 		\end{verbatim}
 	
 	\end{block}
