Linux user model lecture

--- a/slides/multiuser/account_files.tex
+++ b/slides/multiuser/account_files.tex
@@ -47,12 +47,12 @@
 		\item Посмотреть права доступа к файлам {\tt group}, {\tt passwd}, {\tt shadow}\\
 			{\tt ls -l /etc/{group, passwd, shadow}}
 		\item Добавить пользователя и группу и посмотреть изменения в перечисленных файлах
-		\item Cоздать пользователя без использования системных утилит
+		\item Cоздать пользователя без использования системных утилит (пароль взять такой же, как у существующего пользователя).
     \end{itemize}
 	\pause
 	 \begin{itemize}
-		\item Изменить пароль пользователю с помощью утилиты {\tt passwd}\\
-			Hint: {\tt /etc/passwdqc.conf}
+		\item Изменить пароль пользователю с помощью утилиты {\tt passwd}%\\
+%			Hint: {\tt /etc/passwdqc.conf}
 		\item Сбросить пароль пользователю\\
 			Hint: {\tt usermod}
     \end{itemize}
