Added networking to LinuxEssentials

--- a/slides/networking/useful-progs.tex
+++ b/slides/networking/useful-progs.tex
@@ -1,13 +1,14 @@
 \begin{frame}{Полезные утилиты}
 	\begin{center}
 		\begin{itemize}
-			\item telnet
 			\item netstat / ss
+			\item nslookup / dig
 			\item ping
 			\item traceroute
 			\item tcpdump
+			\item telnet
+			\item netcat
 			\item nmap
-			\item nslookup / dig
 		\end{itemize}
 	\end{center}
 
