--- a/slides/networking/bridge.tex
+++ b/slides/networking/bridge.tex
@@ -3,7 +3,7 @@
 		\item Создать -- {\tt brctl addbr <bridge>}
 		\item Удалить -- {\tt brctl delbr <bridge>}
 		\item Добавить интерфейс -- {\tt brctl addif <bridge> <device>}
-		\item Удалить интерфейс-- {\tt brctl addif <bridge> <device>}
+		\item Удалить интерфейс-- {\tt brctl delif <bridge> <device>}
 	\end{itemize}
 \end{frame}
 
