--- a/epam/LinuxEssentials/06-networking.tex
+++ b/epam/LinuxEssentials/06-networking.tex
@@ -36,6 +36,10 @@
 \subsection{Полезные программы}
 \mode<all>{\input{../../slides/networking/useful-progs}}
 
+\section{ssh}
+\mode<all>{\input{../../slides/networking/ssh}}
+
+
 \section{Дополнительные типы интерфейсов}
 
 \subsection{alias, vlan}
