--- a/slides/networking/routing.tex
+++ b/slides/networking/routing.tex
@@ -9,6 +9,8 @@
 		{\tt echo 1 > /proc/sys/net/ipv4/ip\_forward}\\
 		{\tt sysctl net.ipv4.ip\_forward=1}
 	\end{block}
+	
+	Hint: {\tt /proc/sys/net}
 
 	Примеры:
 	\begin{itemize}
