--- a/slides/networking/useful-progs.tex
+++ b/slides/networking/useful-progs.tex
@@ -37,7 +37,7 @@
 			\begin{itemize}
 				\item Чат по протоколу TCP с соседом
 				\item Чат по протоколу UDP с соседом
-				\item Передать файл
+				\item Передать текстовый и бинарный файлы
 			\end{itemize}
 	
 			При создании чата использовать {\tt netstat} и {\tt tcpdump}
