--- a/slides/disk/disk-gpt.tex
+++ b/slides/disk/disk-gpt.tex
@@ -11,9 +11,8 @@
       \column{0.5\textwidth}
       \includegraphics[width=0.9\textwidth]{../../slides/disk/gpt.png}
   \end{columns}
-  \begin{center}
-   \Large Утилиты
-  \end{center}
+\end{frame}
+\begin{frame}{Утилиты}
   \begin{itemize}
     \item gdisk (аналог fdisk)
     \item cgdisk (аналог cfdisk)
