--- a/slides/networking/practice.tex
+++ b/slides/networking/practice.tex
@@ -20,8 +20,8 @@
 					/dev/loop ({\tt dd, losetup})
 				\item Создать группу томов на базе этого устройства ({\tt pvcreate, vgcreate})
 				\item Выделить 1 GB под логический диск ({\tt lvcreate})
-				\item Скопировать образ виртуального диска в полученный логический том ({\tt dd})
-				\item Создать снимок логического тома на 100MB ({\tt lvcreate}) для каждой виртуальной машины.
+				%\item Скопировать образ виртуального диска в полученный логический том ({\tt dd})
+				%\item Создать снимок логического тома на 100MB ({\tt lvcreate}) для каждой виртуальной машины.
 			\end{itemize}
 	\end{block}
 \end{frame}
@@ -33,7 +33,8 @@
 		\begin{itemize}
 			\item {\tt modprobe kvm-intel} 
 			\item {\tt modprobe tun}
-			\item Запустить виртуальные машины (вручную, либо с использованием скрипта {\tt start-kvm.sh})
+			\item Установить centos-minimal на  машину из iso файла.
+                        \item Создать два снимка логического тома виртуальной машины
 			\item Убедиться в наличии tap интерфейсов
 		\end{itemize}
 	\end{block}
