Produced Handbook. Removed quotes in frametitle which causes compilation confusion

--- a/slides/packaging/intro.tex
+++ b/slides/packaging/intro.tex
@@ -1,13 +1,12 @@
-\begin{frame}
-	\frametitle{Про "DLL hell"}
-	
-	\begin{block}{Устанавливаем программу}
+\begin{frame}{Про DLL hell}
+
+    \begin{block}{Устанавливаем программу}
 	А что же с библиотеками?
 	\end{block}
 
 	\pause
 
-	\begin{columns}
+   \begin{columns}
 		\column{0.5\textwidth}
 		\begin{block}{"В системе все есть!"}
 		\begin{itemize}
