--- a/slides/networking/practice.tex
+++ b/slides/networking/practice.tex
@@ -13,8 +13,8 @@
 
 
 
-\begin{frame}{Практика: создание тестовой среды}
-	\begin{block}{Подготовка дисковой подсистемы}
+\begin{frame}
+	\frametitle{Подготовка дисковой подсистемы}
 			\begin{itemize}
 				\item Создать пустой файл размером в 1.5 GB и отобразить на устройство
 					/dev/loop ({\tt dd, losetup})
@@ -23,56 +23,66 @@
 				%\item Скопировать образ виртуального диска в полученный логический том ({\tt dd})
 				%\item Создать снимок логического тома на 100MB ({\tt lvcreate}) для каждой виртуальной машины.
 			\end{itemize}
-	\end{block}
 \end{frame}
 
-\begin{frame}{Практика: создание тестовой среды}
-
-	\begin{block}{Запуск виртуальных машин}
-
-		\begin{itemize}
-			\item {\tt modprobe kvm-intel} 
-			\item {\tt modprobe tun}
+\begin{frame}[fragile]{Установка системы}
+        \begin{itemize}
 			\item Установить centos-minimal на  машину из iso файла.
-                        \item Создать два снимка логического тома виртуальной машины
+            \item Создать два снимка логического тома виртуальной машины
 			\item Убедиться в наличии tap интерфейсов
 		\end{itemize}
-	\end{block}
 
 \end{frame}
 
+\begin{frame}[fragile]{Пример запуска kvm}
+		\begin{itemize}
+          \item {\tt modprobe kvm-intel} {\small Включаем модуль поддержки виртуализации в ядре} 
+          \item {\tt modprobe tun}  {\small Включаем поддержку tun, tap виртуальных сетевых интерфейсов}
+          \item 
+            \begin{lstlisting}[language=bash,basicstyle=\tiny] 
+kvm -enable-kvm -cdrom centos-minimal.iso -hda /dev/loop0 -m 512M   \
+    -boot order=cd -serial stdio -net nic,model=rtl8139 -net tap,ifname=tap0 
+            \end{lstlisting}
+              \begin{enumerate}
+                \item[{\tt -enable-kvm}] Включает ядерную поддержку виртуализации
+                \item[{\tt -cdrom}] Устройство или disk image, cdrom виртуальной машины
+                \item[{\tt -hda}] Устройство или disk image, представляет жесткий диск VM
+                \item[{\tt -serial}] Перенаправление com порта (консоль ядра)
+                \item[{\tt -net nic}] Условная модель сетевой карточки
+                \item[{\tt -net tap}] TAP интерфейс, на который будет приходить сеть из VM
+                \item[{\tt -boot order}] cd (вначале cdrom (с), потом диск (d))
+                \item[{\tt -m}] Объем памяти для VM
+              \end{enumerate}
+        \end{itemize}
+\end{frame}        
 
-\begin{frame}{Практика: создание тестовой среды}
 
-	\begin{block}{Настройка сети на хосте}
+\begin{frame}
+	\frametitle{Настройка сети на хосте}
 			\begin{itemize}
 				\item Создать мост {\tt brctl} и назначить ему адреса из соответствующих диапазонов {\tt ifconfig/ip}
 				\item Поднять виртуальные интерфейсы {\tt ifconfig/ip}
 				\item Добавить виртуальные интерфейсы к мосту {\tt brctl}
 			\end{itemize}
-	\end{block}
 \end{frame}
 
 
-\begin{frame}{Практика: создание тестовой среды}
-	\begin{block}{Настройка сети на виртуальных машинах}
+\begin{frame}
+	\frametitle{Настройка сети на виртуальных машинах}
 			\begin{itemize}
 				\item Назначить адрес устройству eth0 {\tt ifconfig/ip}
 				\item Добавить адрес маршрутизатора по умолчанию {\tt route/ip}
 				\item Проверить доступность виртуальных машин и хоста {\tt ping/nmap}
 			\end{itemize}
-	\end{block}
 \end{frame}
 
-\begin{frame}{Практика: создание тестовой среды}
-
-	\begin{block}{Настройка роутинга и NAT}
+\begin{frame}
+	\frametitle{Настройка роутинга и NAT}
 			\begin{itemize}
 				\item Разрешить форвардинг на хосте
 				\item Настроить NAT на хосте ({\tt iptables},  правило {\tt MASQUERADE})
 				\item Проверить доступность хостов из ''внешней'' сети {\tt ping/nmap}
 			\end{itemize}
-	\end{block}
 \end{frame}
 
 
