--- a/epam/LinuxEssentials/01-intro.tex
+++ b/epam/LinuxEssentials/01-intro.tex
@@ -78,7 +78,7 @@
 
 \subsection{Ядро Linux}
 
-\mode<all>{\input{../../slides/intro/linux-kernel}}
+\mode<all>{\input{../../slides/intro/linux-kernel.tex}}
 
 \subsection{Userspace}
 
