--- a/epam/LinuxEssentials/02-command_line_intro.tex
+++ b/epam/LinuxEssentials/02-command_line_intro.tex
@@ -6,13 +6,21 @@
  \frametitle{}
  \titlepage
 \end{frame}
+
+\section{Интерфейс командной строки}
+\mode<all>{\input{../../slides/cmdline/clui_vs_gui.tex}}
+
+\section{ Командная оболочка(shell) }
 \begin{frame}
 \frametitle{}
  \begin{center}
    {\Large Командная оболочка(shell) }
  \end{center}
 \end{frame}
-\mode<all>{\input{../../slides/cmdline/shell-intro}}
+
+\mode<all>{\input{../../slides/cmdline/shell-intro.tex}}
+
+\section{ Документация }
 \begin{frame}
 \frametitle{}
  \begin{center}
@@ -20,16 +28,20 @@
  \end{center}
 \end{frame}
 \mode<all>{\input{../../slides/cmdline/help}}
+
+\section{ Навигация по файловой системе}
 \begin{frame}
 \frametitle{}
  \begin{center}
    {\Large Навигация по файловой системе }
  \end{center}
 \end{frame}
-\mode<all>{\input{../../slides/cmdline/fs-navigation-cmd}}
+\mode<all>{\input{../../slides/fs/fs-structure.tex}}
 
-\mode<all>{\input{../../slides/fs/fs-structure}}
+\mode<all>{\input{../../slides/cmdline/fs-navigation-cmd.tex}}
 
+
+\section{ Дополнительные возможности оболочки}
 \mode<all>{\input{../../slides/cmdline/bash-intro}}
 
 
