--- a/slides/cmdline/help.tex
+++ b/slides/cmdline/help.tex
@@ -1,24 +1,51 @@
-\begin{frame}[fragile]{Получение помощи}
+
+\begin{frame}[fragile]{Как правильно задавать вопросы}
+From FAQ How To Ask Questions The Smart Way
+Before You Ask
+  \begin{itemize}
+	  \item Try to find an answer by reading the manual.
+	  \item Try to find an answer by reading a FAQ.
+	  \item Try to find an answer by searching the archives of the forum you plan to post to.
+	  \item Try to find an answer by searching the Web.
+	  \item Try to find an answer by inspection or experimentation.
+	  \item Try to find an answer by asking a skilled friend.
+	  \item If you're a programmer, try to find an answer by reading the source code.
+    \end{itemize}
+\end{frame}
+
+
+\begin{frame}[fragile]{Источники получение помощи}
   \begin{itemize}
     \pause
     \item \textbf{man} - помощь по внешним командам
     \pause
-    \item \textbf{help} - помощь по внутренним командам bash (также man bash)
+    \item \textbf{help} - встроенная помощь по внутренним командам bash (также man bash)
     \pause
     \item \textbf{info} - расширенная помощь по некоторым командам (texinfo format)
-      \begin{itemize}
-       \item   Попробовать {\tt info coreutils}
-       \item   Справка по навигации -- нажать h
-      \end{itemize}
+     \begin{block}{Упражнение. Работа с командой info}
+        \begin{itemize}
+        \item   Попробовать {\tt info coreutils}
+        \item   Справка по навигации -- нажать h
+        \end{itemize}
+	 \end{block}
+		\begin{block}{Упражнение. Другие источники помощи.}
+			\begin{lstlisting}
+            help 
+            help help
+            man -h
+            info --help
+			\end{lstlisting}
+		\end{block}
   \end{itemize}
 \end{frame}
 
 \begin{frame}[fragile]{Основное о man}
 \begin{columns}
-	\column{2.2in}
+	\column{2.5in}
 		\begin{itemize}
 			\item Прочитайте {\tt man man} !
-			\item Apropos {\tt man -k <слово>}
+			\item apropos, аналог {\tt man -k <слово>}
+            \item whatis, аналог {\tt man -f <слово>} 
 			\item Разделы (sections)
 				\begin{itemize}
 					\item[1] Основная секция(юзерские программы)
@@ -36,13 +63,22 @@
 	\column{1in}
 		\begin{block}{Попробовать}
 			\begin{lstlisting}
-man -k printf
-man 3 printf
-man 1 printf
-man -a printf
+man -k intro or apropos
+man -f intro or whatis
+man 3 intro
+man 1 intro
+man -wa intro
 			\end{lstlisting}
 		\end{block}
 	\end{columns}
 \end{frame}
 
 
+%\begin{frame}[fragile]{Чему научились}
+%  \begin{itemize}
+%  \item Как спрашивать у сообщества
+%  \item Умеем использовать 3 источника получения информации man, info, help
+%  \item Как перемещаться по страницам помощи info и man
+%  \item Иcкать в системе помощи man и запрашивать из одного из 8-ми разделов 
+%  \end{itemize}
+%\end{frame}
