--- a/slides/cmdline/shell-intro.tex
+++ b/slides/cmdline/shell-intro.tex
@@ -1,22 +1,41 @@
-\begin{frame}[fragile]{Определение(не совсем формальное)}
-	\textbf{Shell} -- приложение, обеспечивающее выполнение других приложений и их взаимодействие, а также представляющая услуги командной строки. 
-	\begin{center}
-	 или
-	\end{center}
-	\textbf{Shell} -- приложение, обеспечивающее доступ к основным функциям ядра.
+\begin{frame}[fragile]{Оболочка операционной системы}
+
+     \begin{block}{Оболочка операционной системы}
+     (от англ. shell «оболочка») \alert{интерпретатор команд} операционной системы, обеспечивающий интерфейс для взаимодействия пользователя с функциями системы.  
+     \end{block}
+     Что такое Unix shell?
+     \begin{itemize}
+        \item Обычная программа, запускающаяся после входа в систему
+        \item Интерактивный командный интерпретатор
+        \item Платформа интеграции (для утилит)
+        \item Язык программирования
+     \end{itemize}
 
 	\pause
 	\vspace{0.5in}
-	Пример shell из Windows-world -- cmd.exe
+	Пример shell из  Windows-world --  cmd.exe, PowerShell
 	\vspace{0.5in}
-
 	Минимальный дистрибутив Linux -- ядро + shell 
 
 \end{frame}
+\note{   
+     Как вы помните задачи ядра - управление процессами и потоками, управление
+     памятью, Управление файлами, Разграничение доступа, мониторинг и
+     конфигурация. Shell обеспечивает пользователю  интерфейс доступа к этим функциям ядра.    
+     Как Интерактивный командный интерпретатор shell предосталяет средства:
+     редактора командной строки, часто со средствами упрощающими ввод команд
+     такими как  горячие клавишами, автодополнение, история команд и поиск по
+     истории, сокращения команд (aliases), сокращения путей к файлам c помощью
+     спецсимволов. 
+     Как Платформа интеграции предоставляет средства пренаправления
+     ввода/вывода, каналы (pipes), и возможность создавать скрипты.
+     Одновременно является языком программирования, но эту часть будем
+     рассматривать позже. 
+}
 
 \begin{frame}[fragile]{Основные типы shell в Unix}
   \begin{itemize}
-    \item Bourne shell совместимые
+    \item Bourne shell совместимые (POSIX-совместимые)
       \begin{itemize}
         \item \textbf{sh} исходная bourne shell (Steve Bourne, 1978)
         \item \textbf{ksh} Korn shell (David Korn, 1983)
@@ -32,34 +51,78 @@
        \end{itemize}
   \end{itemize}
 \end{frame}
-\begin{frame}{Встроенные команды shell и внешние команды}
-\begin{columns}
-\column{0.5\textwidth}
-\begin{center}
-{\Large Встроенные}
-\begin{itemize}
-  \item cd
-  \item echo
-  \item for ...; do ; done
+
+\note { 
+Существуют  Рассмотрим наиболее распрастраненные реализации оболочек: 
+Разделяются на две группы POSIX-совместимые и несовместимые. 
+sh — оригинальный шелл Борна;
+bash (bourne again shell) (эмуляция совместимости POSIX[1]) расширенная Борном свободная (разработанная в рамках проекта GNU). Стандартная оболочка в Linux.
+
+C shell — (несовместима с POSIX shell) оболочка, с синтаксисом на основе Си,
+созданная Университетом Беркли в рамках проекта по реализации BSD Unix.
+    csh (C-Shell) — оболочка из состава дистрибутива BSD, имеет Си-образный синтаксис и не является POSIX-совместимой. Впервые введены возможности управления заданиями и произведены другие улучшения.
+    tcsh (csh) — реализация csh с интерактивными возможностями, не уступающими bash[1]. Удобна для интерактивной работы. Совместима с csh.
+}
+
+\begin{frame}[fragile]{Какие могут быть различия между shell}
+  \begin{itemize}
+    \item Интерактивные возможности
+    \item Платформы
+    \item Поиск соответствий строк и имён файлов
+    \item Программные возможности
+    \item Cовместимость оболочек между собой
 \end{itemize}
-\end{center}
-\column{0.5\textwidth}
-\begin{itemize}
-  \item ls
-  \item cp
-  \item mv
-  \item echo
-\end{itemize}
-\begin{center}
-{\Large Внешние}
-\end{center}
-\end{columns}
 \end{frame}
+/note {
+Интерактивные возможности - клавиатурные сокращения, средства автодополнения, настройки по умолчанию
+Платформы - на чем работают оболочки. bash - кросплотформенная, zsh - нет. 
+Программные возможности - различный синтаксис, bashизмы, функции определяются
+по разному, средства программирования циклы, списки, массивы. Отсюда
+совместимость между собой. 
+Мы будет придерживаться синтаксиса оболочки bash, т.к. она по умолчанию
+используется в дистрибутивах Linux.  Это позволит создать базу, с
+котороый вы легко сможете перейти на подходящие вам варианты. 
+}
+
+
+\begin{frame}[fragile]{Как работать с командной строкой}
+  \begin{itemize}
+    \item 
+	Находим приглашение командной строки
+	\$, \#, user@host:~\$
+    \item
+	Вводим имя команды, опции, аргументы, запускаем на выполнение нажатием <Enter>
+   \end{itemize}
+
+	Что такое команды?
+  \begin{itemize}
+    \item исполняемая программа (бинарный файл, скрипт)
+    \item встроенные в оболочку команды (shell built-ins)
+    \item функция оболочки
+    \item сокращение команды (an alias) 
+  \end{itemize}
+\end{frame}
+\note {
+Система ожидает ввода команды, показывая приглашение командной строки.
+Пользователь вводит команды опции аргументы и нажимает <Enter>. 
+Опции - модификаторы поведения программы.  
+Аргументы - то над чем производятся действия.
+}
+
+
 \begin{frame}[fragile]{Маленькое упражнение}
+Определить список установленных оболочек в системе.
 \begin{lstlisting}[language=bash]
 cat /etc/shells
 ls -l <filename> # для каждого элемента /etc/shells
 readlink -e <filename> 
+\end{lstlisting}
+Командой type определить какой тип команды (встроенная в оболочку или внешняя программа)
+\begin{lstlisting}[language=bash]
+type type
+type dmesg
+type ls
+type -a test
 \end{lstlisting}
 \end{frame}
 
