--- a/slides/fs/fs-structure.tex
+++ b/slides/fs/fs-structure.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Файловая структура}
 	
-	{\center "Дерево внутри дома?" (c) Шрек}
+	%{\center "Дерево внутри дома?" (c) Шрек}
 		
 	\begin{columns}
 	\column{0.2\textwidth}
