--- a/epam/Presentation/02-command.tex
+++ b/epam/Presentation/02-command.tex
@@ -3,6 +3,15 @@
 \title{Введение в GNU/Linux}
 
 
+\AtBeginSection[] % Do nothing for \section*
+{
+    \begin{frame}<beamer>
+    \frametitle{Темы занятия}
+    \tableofcontents[currentsection]
+    \end{frame}
+}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%% Begin Document  %%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -22,32 +31,40 @@
 %	[hideallsubsections]
 \end{frame}
 
-\section{Командная строка}
-%\subsection{Командная оболочка}
+
+\section{Основы командной строки}
+\subsection{Командная оболочка}
 
 \mode<all>{\input{../../slides/cmdline/shell-intro}}
 
-%\subsection{Работа в командной строке}
+\section{Получение помощи}
 \mode<all>{\input{../../slides/cmdline/help}}
 
+\section{Навигация}
 \mode<all>{\input{../../slides/cmdline/fs-navigation-cmd}}
 
-%\section{Взаимодействие процессов}
+\section{Процессы}
 \mode<all>{\input{../../slides/cmdline/process-intro}}
 
+\section{Дополнительные возможности оболочки}
 \mode<all>{\input{../../slides/cmdline/bash-intro}}
 
+
+\section{Работа с текстом}
 \mode<all>{\input{../../slides/cmdline/commands1}}
 
+\section{Перенаправление потоков}
 \mode<all>{\input{../../slides/cmdline/io-redirection}}
 \mode<all>{\input{../../slides/cmdline/io-redirection-here.tex}}
 
-\mode<all>{\input{../../slides/cmdline/editors-intro}}
 
 \mode<all>{\input{../../slides/cmdline/practice-text_and_fs}}
 
+\section{Текстовые редакторы}
+\mode<all>{\input{../../slides/cmdline/editors-intro}}
 \mode<all>{\input{../../slides/cmdline/vim}}
 
+\section{Сжатие файлов}
 \mode<all>{\input{../../slides/cmdline/commands2}}
 
 \end{document}
