Bash lecture redesign

--- a/epam/BashScripting/01-bash_intro.tex
+++ b/epam/BashScripting/01-bash_intro.tex
@@ -32,6 +32,7 @@
 
 \section[Bash intro]{Введение в Bash}
 \mode<all>{\input{../../slides/cmdline/bash-intro}}
+\mode<all>{\input{../../slides/bash/hotkeys}}
 \mode<all>{\input{../../slides/bash/description}}
 
 \section[Runtime]{Скрипты и запуск}
