--- a/slides/bash/runtime.tex
+++ b/slides/bash/runtime.tex
@@ -204,13 +204,13 @@ echo stdout > test.txt
 				\end{lstlisting}
 			\end{block}
 		
-		\item ``>>'' -- Добавление в файл
+		\item ``>{}>'' -- Добавление в файл
 			\begin{block}{Пример}
 				\begin{lstlisting}
 echo stdout >> test.txt
 				\end{lstlisting}
 			\end{block}
-																										                
+
 		\item ``<'' -- Чтение из файла
 			\begin{block}{Пример}
 				\begin{lstlisting}
