--- a/epam/Presentation/07-bash_intro.tex
+++ b/epam/Presentation/07-bash_intro.tex
@@ -16,23 +16,19 @@
 	\end{center}
 \end{frame}
 
-\begin{frame}
-	\tableofcontents
-%	[hideallsubsections]
-\end{frame}
-
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Что такое и с чем едят}
+\section{Введение}
 
 \mode<all>{\input{../../slides/bash/description}}
+\mode<all>{\input{../../slides/bash/hotkeys}}
 
 \section[Runtime]{Скрипты и запуск}
-
+\mode<all>{\input{../../slides/bash/customization}}
 \mode<all>{\input{../../slides/bash/runtime}}
+\mode<all>{\input{../../slides/cmdline/io-redirection-here.tex}}
 
 \section{Переменные}
 
@@ -43,8 +39,8 @@
 \mode<all>{\input{../../slides/bash/params}}
 
 
-%\section{Тесты и сравнения}
+%%\section{Тесты и сравнения}
 
-%\mode<all>{\input{../../slides/bash/tests}}
+%%\mode<all>{\input{../../slides/bash/tests}}
 
 \end{document}
