Some splitting of the sections for bash intro

--- a/epam/Presentation/07-bash_intro.tex
+++ b/epam/Presentation/07-bash_intro.tex
@@ -23,11 +23,15 @@
 \section{Введение}
 
 \mode<all>{\input{../../slides/bash/description}}
+\section{Интерактивная shell}
 \mode<all>{\input{../../slides/bash/hotkeys}}
-
-\section[Runtime]{Скрипты и запуск}
+\mode<all>{\input{../../slides/bash/jobcontrol}}
 \mode<all>{\input{../../slides/bash/customization}}
+
+\section[Runtime]{Базовый синтаксис}
+
 \mode<all>{\input{../../slides/bash/runtime}}
+\mode<all>{\input{../../slides/bash/redirection}}
 \mode<all>{\input{../../slides/cmdline/io-redirection-here.tex}}
 
 \section{Переменные}
