Modifications propagated to BashScripting

--- a/epam/BashScripting/01-bash_intro.tex
+++ b/epam/BashScripting/01-bash_intro.tex
@@ -38,6 +38,8 @@
 \section[Runtime]{Скрипты и запуск}
 
 \mode<all>{\input{../../slides/bash/runtime}}
+\mode<all>{\input{../../slides/bash/jobcontrol}}
+\mode<all>{\input{../../slides/bash/redirection}}
 \mode<all>{\input{../../slides/cmdline/io-redirection-here.tex}}
 
 \end{document}
