Added ".." description for bash

--- a/slides/bash/runtime.tex
+++ b/slides/bash/runtime.tex
@@ -28,6 +28,15 @@
 		\end{itemize}
 	\end{block}
 
+	\pause
+
+	\begin{block}{Фигурные скобки и перечисления с помощью ``..``}
+		\begin{itemize}
+			\item Посмотреть на результат выполнения команды \\
+				{\tt echo \{a..d\}:\{-10..10\}}
+		\end{itemize}
+	\end{block}
+
 \end{frame}
 
 \begin{frame}[fragile]
