Fixed type of code snippets

--- a/epam/DevelopmentToolchain/common.tex
+++ b/epam/DevelopmentToolchain/common.tex
@@ -28,7 +28,7 @@
 
 \lstset{escapechar=`,
 	extendedchars=false,
-	language=sh,
+	language=c,
 	frame=single,
 	tabsize=2, 
 	columns=fullflexible, 
